--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <section id="img-section">
       <img
         id="tribute-image"
-        src="https://example.com/ralph_smedley_image.jpg"
+        src="https://alchetron.com/cdn/ralph-c-smedley-ce08a559-3679-4b81-ae1b-24a7a1d1893-resize-750.jpeg"
         alt="Ralph C. Smedley - Founder of Toastmasters"
       />
       <figcaption id="img-caption">
-        Ralph C. Smedley passionately delivering a speech at a Toastmasters event.
+        Ralph C. Smedley.
       </figcaption>
     </section>
 
