--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
 </head>
 <body>
 
-  <main>
+  <main id="main">
 
     <header>
-      <h1>Ralph C. Smedley</h1>
+      <h1 id="title">Ralph C. Smedley</h1>
       <p class="subtitle">The Visionary Leader Behind Toastmasters</p>
     </header>
 
     <section id="img-section">
-      <img
-        id="tribute-image"
-        src="https://alchetron.com/cdn/ralph-c-smedley-ce08a559-3679-4b81-ae1b-24a7a1d1893-resize-750.jpeg"
-        alt="Ralph C. Smedley - Founder of Toastmasters"
-      />
-      <figcaption id="img-caption">
-        Ralph C. Smedley.
-      </figcaption>
+      <div id="img-div">
+        <img
+          id="image"
+          src="https://alchetron.com/cdn/ralph-c-smedley-ce08a559-3679-4b81-ae1b-24a7a1d1893-resize-750.jpeg"
+          alt="Ralph C. Smedley - Founder of Toastmasters"
+        />
+        <figcaption id="img-caption">
+          Ralph C. Smedley.
+        </figcaption>
+      </div>
     </section>
 
     <section id="tribute-info">
@@ -36,24 +38,6 @@
           <div class="list-item-icon">&#8226;</div>
           <div class="list-item-content">
             <b>1905:</b> Establishes the first Toastmasters club in Santa Ana, California, sparking a global movement.
-          </div>
-        </li>
-        <li>
-          <div class="list-item-icon">&#8226;</div>
-          <div class="list-item-content">
-            <b>1924:</b> Proposes the idea of Toastmasters International, a platform for personal and professional development.
-          </div>
-        </li>
-        <li>
-          <div class="list-item-icon">&#8226;</div>
-          <div class="list-item-content">
-            <b>1960:</b> The Toastmasters International headquarters moves to Rancho Santa Margarita, California, becoming a hub for communication excellence.
-          </div>
-        </li>
-        <li>
-          <div class="list-item-icon">&#8226;</div>
-          <div class="list-item-content">
-            <b>1965:</b> Ralph C. Smedley leaves a lasting legacy, passing away, but his vision continues to inspire millions worldwide.
           </div>
         </li>
       </ul>
